--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,5 +24,5 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Codecov
-      run: bash <(curl -s https://codecov.io/bash)
+    - name: Upload Code Coverage in Codecov
+      uses: codecov/codecov-action@v1
